--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,7 +185,7 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "a1cbf69b-b586-4e8c-d918-d9bb94695895",
+        "outputId": "3a287163-8ce0-48f7-aa25-cbbc522f1658",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,20 +252,27 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "5c7623ff-7bed-47a4-f3b9-45bd3280b904",
+        "outputId": "70bd2dcd-73d2-40da-b65e-7ff0506341ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ln: failed to create symbolic link '/content/buckets/b1/labo1': File exists\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
@@ -287,7 +294,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "ab140802-553f-41ba-a06e-dcde8718b994",
+        "outputId": "253c365b-3d50-4170-b5e9-e3882b3c287c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,17 +312,17 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454465</td><td>77.7</td><td>1326115</td><td>70.9</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657166</td><td>35.1</td><td>1454477</td><td>77.7</td><td>1454477</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220141</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454465 | 77.7 | 1326115 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454465 & 77.7 & 1326115 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657166 | 35.1 | 1454477 | 77.7 | 1454477 | 77.7 |\n| Vcells | 1220141 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657166 & 35.1 & 1454477 & 77.7 & 1454477 & 77.7\\\\\n\tVcells & 1220141 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657244 35.2 1454465    77.7 1326115  70.9\n",
-              "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
+              "Ncells  657166 35.1 1454477    77.7 1454477  77.7\n",
+              "Vcells 1220141  9.4 8388608    64.0 1975128  15.1"
             ]
           },
           "metadata": {}
@@ -333,36 +340,10 @@
         "require(\"primes\")"
       ],
       "metadata": {
-        "id": "JO-12d7YHkWy",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0827ddfa-3ebd-453e-852e-94b811974e83"
+        "id": "JO-12d7YHkWy"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Loading required package: data.table\n",
-            "\n",
-            "Loading required package: rpart\n",
-            "\n",
-            "Loading required package: parallel\n",
-            "\n",
-            "Loading required package: primes\n",
-            "\n",
-            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-            "“there is no package called ‘primes’”\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "Loading required package: primes\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -389,7 +370,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -415,7 +396,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -471,7 +452,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -494,7 +475,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -510,7 +491,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -525,7 +506,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -541,7 +522,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -574,7 +555,7 @@
       "metadata": {
         "id": "xxCAwIKyIaTl"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -590,6 +571,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "\n",
         "# # itero por los loops anidados para cada hiperparametro\n",
         "# iter <- 0\n",
@@ -637,14 +619,16 @@
         "# }\n"
       ],
       "metadata": {
-        "id": "ipLHm3STIfmb"
+        "id": "ipLHm3STIfmb",
+        "cellView": "form"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# ## CAMBIO estrategia de busqueda GridSearch\n",
         "# ## Primero por cp , max_depth\n",
         "# ## Luego por min_split / min_bucket\n",
@@ -705,7 +689,8 @@
         "# }"
       ],
       "metadata": {
-        "id": "aK59cRaksScD"
+        "id": "aK59cRaksScD",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -713,6 +698,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "## CAMBIO estrategia de busqueda GridSearch\n",
         "## en base a analisis anteriores ..\n",
         "## dejo cp en -0.5\n",
@@ -783,7 +769,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U__C8pfPeTOW",
-        "outputId": "a1e199a0-c425-4d88-9744-927199b301ff"
+        "outputId": "a1e199a0-c425-4d88-9744-927199b301ff",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -799,6 +786,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "#\n",
         "# Intento nuevamente, dos cp\n",
         "#\n",
@@ -854,7 +842,8 @@
         "outputId": "310d48d5-01c2-40a8-c6e0-38716732b27a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -909,6 +898,8 @@
         "\n",
         "param_filename <- sprintf(\"gridsearch_detalle_%02d.txt\", PARAM_SEARCH_SPLIT)\n",
         "\n",
+        "tb_grid_search_detalle <- verifica_tabla_detalles(param_filename)\n",
+        "\n",
         "iter <- 0\n",
         "\n",
         "for (params in param_search)\n",
@@ -945,10 +936,22 @@
         "}"
       ],
       "metadata": {
-        "id": "gz01YiGpB31E"
+        "id": "gz01YiGpB31E",
+        "outputId": "5fb9c306-ca98-4826-8ea7-1b4ee9d30c13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1083,6 +1086,15 @@
       ],
       "metadata": {
         "id": "IaVgMu4tPwyB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "ijvKKeKNJUQ-"
       }
     }
   ]
