--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -190,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "253c365b-3d50-4170-b5e9-e3882b3c287c",
+        "outputId": "b9be83ff-a672-40a5-8bdb-29a928895a84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -312,17 +312,17 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657166</td><td>35.1</td><td>1454477</td><td>77.7</td><td>1454477</td><td>77.7</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>1220141</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454454</td><td>77.7</td><td>1326123</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657166 | 35.1 | 1454477 | 77.7 | 1454477 | 77.7 |\n| Vcells | 1220141 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657166 & 35.1 & 1454477 & 77.7 & 1454477 & 77.7\\\\\n\tVcells & 1220141 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454454 | 77.7 | 1326123 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454454 & 77.7 & 1326123 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657166 35.1 1454477    77.7 1454477  77.7\n",
-              "Vcells 1220141  9.4 8388608    64.0 1975128  15.1"
+              "Ncells  657244 35.2 1454454    77.7 1326123  70.9\n",
+              "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
           "metadata": {}
@@ -340,10 +340,29 @@
         "require(\"primes\")"
       ],
       "metadata": {
-        "id": "JO-12d7YHkWy"
+        "id": "JO-12d7YHkWy",
+        "outputId": "8c590c7f-15e9-47db-c44d-d1b2ce1dc52c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 6,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: data.table\n",
+            "\n",
+            "Loading required package: rpart\n",
+            "\n",
+            "Loading required package: parallel\n",
+            "\n",
+            "Loading required package: primes\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -370,7 +389,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -396,7 +415,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -452,7 +471,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -475,7 +494,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -491,7 +510,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -506,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -522,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -555,7 +574,7 @@
       "metadata": {
         "id": "xxCAwIKyIaTl"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -622,7 +641,7 @@
         "id": "ipLHm3STIfmb",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -692,7 +711,7 @@
         "id": "aK59cRaksScD",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -765,23 +784,11 @@
         "# }"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "U__C8pfPeTOW",
-        "outputId": "a1e199a0-c425-4d88-9744-927199b301ff",
         "cellView": "form"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  "
-          ]
-        }
-      ]
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -839,22 +846,10 @@
       ],
       "metadata": {
         "id": "nMktXlxcue0z",
-        "outputId": "310d48d5-01c2-40a8-c6e0-38716732b27a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  222  223  224  225  226  227  228  229  230  231  232  233  234  235  236  237  238  239  240  241  242  243  244  245  246  247  248  249  250  251  252  253  254  "
-          ]
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -866,7 +861,7 @@
         "for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
         "  for (vmin_split in seq(10, 1000, 50)) {\n",
         "    for(vcp in c(-1, -0.5)) {\n",
-        "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/2), round(vmin_split/2), round(vmin_split/10))) {\n",
+        "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/4), round(vmin_split/8), round(vmin_split/10))) {\n",
         "        param_search[[param_i]] <- list(\n",
         "          cp=vcp,\n",
         "          maxdepth=vmax_depth,\n",
@@ -937,18 +932,18 @@
       ],
       "metadata": {
         "id": "gz01YiGpB31E",
-        "outputId": "5fb9c306-ca98-4826-8ea7-1b4ee9d30c13",
+        "outputId": "4ad257a2-56a7-4efa-9ce2-30bd6e9aef27",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1  2  "
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  "
           ]
         }
       ]
