--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,12 +185,12 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "3a287163-8ce0-48f7-aa25-cbbc522f1658",
+        "outputId": "e308d4ac-1265-430f-cd02-609525ffc4bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,27 +252,20 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "70bd2dcd-73d2-40da-b65e-7ff0506341ba",
+        "outputId": "927787d8-420e-4d8d-e6bf-87555979a607",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ln: failed to create symbolic link '/content/buckets/b1/labo1': File exists\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -294,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "b9be83ff-a672-40a5-8bdb-29a928895a84",
+        "outputId": "3c93815c-f9b8-440c-9d85-f4bfcfb89be7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -312,16 +305,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454454</td><td>77.7</td><td>1326123</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454485</td><td>77.7</td><td>1326130</td><td>70.9</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454454 | 77.7 | 1326123 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454454 & 77.7 & 1326123 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454485 | 77.7 | 1326130 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454485 & 77.7 & 1326130 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657244 35.2 1454454    77.7 1326123  70.9\n",
+              "Ncells  657244 35.2 1454485    77.7 1326130  70.9\n",
               "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
@@ -341,7 +334,7 @@
       ],
       "metadata": {
         "id": "JO-12d7YHkWy",
-        "outputId": "8c590c7f-15e9-47db-c44d-d1b2ce1dc52c",
+        "outputId": "a230eec9-6307-43d1-9275-f672883340a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -357,6 +350,13 @@
             "Loading required package: rpart\n",
             "\n",
             "Loading required package: parallel\n",
+            "\n",
+            "Loading required package: primes\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘primes’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
             "\n",
             "Loading required package: primes\n",
             "\n"
@@ -641,7 +641,7 @@
         "id": "ipLHm3STIfmb",
         "cellView": "form"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -711,7 +711,7 @@
         "id": "aK59cRaksScD",
         "cellView": "form"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -787,7 +787,7 @@
         "id": "U__C8pfPeTOW",
         "cellView": "form"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +848,7 @@
         "id": "nMktXlxcue0z",
         "cellView": "form"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -860,7 +860,7 @@
         "param_i <- 1\n",
         "for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
         "  for (vmin_split in seq(10, 1000, 50)) {\n",
-        "    for(vcp in c(-1, -0.5)) {\n",
+        "    for(vcp in c(-1)) {\n",
         "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/4), round(vmin_split/8), round(vmin_split/10))) {\n",
         "        param_search[[param_i]] <- list(\n",
         "          cp=vcp,\n",
@@ -884,7 +884,7 @@
         "\n",
         "## Selecionamos SPLIT PARA CORRER EN ESTE COLAB\n",
         "\n",
-        "PARAM_SEARCH_SPLIT <- 1\n",
+        "PARAM_SEARCH_SPLIT <- 2\n",
         "\n",
         "## Corremos entrenamiento en el split seleccionado\n",
         "\n",
@@ -932,18 +932,18 @@
       ],
       "metadata": {
         "id": "gz01YiGpB31E",
-        "outputId": "4ad257a2-56a7-4efa-9ce2-30bd6e9aef27",
+        "outputId": "77b18468-fdbe-4902-9142-14ec0c0e99fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  "
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  222  223  224  225  226  227  228  229  230  231  232  233  234  235  236  237  238  239  240  241  242  243  244  245  246  247  248  249  250  251  252  253  254  255  256  257  258  259  260  261  262  263  264  265  266  267  268  269  270  271  272  273  274  275  276  277  278  279  280  281  282  283  284  285  286  287  288  "
           ]
         }
       ]
