--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -7,11 +7,11 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "ir",
-      "display_name": "R"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
-      "name": "R"
+      "name": "python"
     }
   },
   "cells": [
@@ -185,7 +185,7 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "b4d9292d-0428-4832-de66-902282374a6c",
+        "outputId": "ffc098b1-4f27-4592-c66a-ff62fc30c9ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,7 +252,7 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "74f0b904-2128-47c8-994e-02dd4896136e",
+        "outputId": "8b0c8cea-be5f-4339-c300-35237f6b080e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "cef77aa4-01d8-4aa2-e2ee-0472d8cab607",
+        "outputId": "6d9e4b85-6325-4039-e2c7-415dabbba1d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,17 +305,17 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657247</td><td>35.2</td><td>1454462</td><td>77.7</td><td>1367415</td><td>73.1</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>1220276</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657166</td><td>35.1</td><td>1454474</td><td>77.7</td><td>1454474</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220141</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657247 | 35.2 | 1454462 | 77.7 | 1367415 | 73.1 |\n| Vcells | 1220276 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657247 & 35.2 & 1454462 & 77.7 & 1367415 & 73.1\\\\\n\tVcells & 1220276 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657166 | 35.1 | 1454474 | 77.7 | 1454474 | 77.7 |\n| Vcells | 1220141 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657166 & 35.1 & 1454474 & 77.7 & 1454474 & 77.7\\\\\n\tVcells & 1220141 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657247 35.2 1454462    77.7 1367415  73.1\n",
-              "Vcells 1220276  9.4 8388608    64.0 1975128  15.1"
+              "Ncells  657166 35.1 1454474    77.7 1454474  77.7\n",
+              "Vcells 1220141  9.4 8388608    64.0 1975128  15.1"
             ]
           },
           "metadata": {}
@@ -334,7 +334,7 @@
       ],
       "metadata": {
         "id": "JO-12d7YHkWy",
-        "outputId": "a526b0a7-efd6-46eb-f2c6-cc01e1aa5b6a",
+        "outputId": "8c389036-2897-4568-e7bd-54edebb4f250",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -379,7 +379,7 @@
         "PARAM <- list()\n",
         "# reemplazar por su primer semilla\n",
         "PARAM$semilla_primigenia <- 191717\n",
-        "PARAM$qsemillas <- 5\n",
+        "PARAM$qsemillas <- 7\n",
         "\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
         "\n",
@@ -471,7 +471,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -494,7 +494,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "xxCAwIKyIaTl"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -858,8 +858,9 @@
         "\n",
         "param_search <- list()\n",
         "param_i <- 1\n",
-        "for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
-        "  for (vmin_split in seq(10, 1000, 50)) {\n",
+        "# for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
+        "for (vmax_depth in c(7)) {\n",
+        "  for (vmin_split in seq(200, 600, 25)) {\n",
         "    for(vcp in c(-1)) {\n",
         "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/4), round(vmin_split/8), round(vmin_split/10))) {\n",
         "        param_search[[param_i]] <- list(\n",
@@ -875,7 +876,7 @@
         "\n",
         "## Divide la Lista para correr en paralelo en varios Colab\n",
         "\n",
-        "param_search_n_splits <- 3\n",
+        "param_search_n_splits <- 1\n",
         "\n",
         "param_search_splits <- split(param_search,\n",
         "            f = cut(seq_along(param_search), param_search_n_splits, labels=FALSE)\n",
@@ -884,7 +885,7 @@
         "\n",
         "## Selecionamos SPLIT PARA CORRER EN ESTE COLAB\n",
         "\n",
-        "PARAM_SEARCH_SPLIT <- 3\n",
+        "PARAM_SEARCH_SPLIT <- 2\n",
         "\n",
         "\n",
         "## Corremos entrenamiento en el split seleccionado\n",
@@ -935,20 +936,20 @@
       ],
       "metadata": {
         "id": "gz01YiGpB31E",
-        "outputId": "f6652aff-3063-4efb-99ad-e5bf4521d408",
+        "outputId": "471a5cd5-6654-4617-e298-b09962b06470",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Split Number:  1 \n",
-            "Split Size:  214 \n",
-            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  "
+            "Split Number:  3 \n",
+            "Split Size:  213 \n",
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  "
           ]
         }
       ]
