--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -7,11 +7,11 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "ir",
+      "display_name": "R"
     },
     "language_info": {
-      "name": "python"
+      "name": "R"
     }
   },
   "cells": [
@@ -185,18 +185,18 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "ffc098b1-4f27-4592-c66a-ff62fc30c9ad",
+        "outputId": "f38860e0-8768-48f3-8970-d7c481a90055",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/.drive\n"
+            "Drive already mounted at /content/.drive; to attempt to forcibly remount, call drive.mount(\"/content/.drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -252,20 +252,27 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "8b0c8cea-be5f-4339-c300-35237f6b080e",
+        "outputId": "6194222d-f866-450c-85be-1f5be3898200",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ln: failed to create symbolic link '/content/buckets/b1/labo1': File exists\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ]
     },
@@ -287,7 +294,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "6d9e4b85-6325-4039-e2c7-415dabbba1d2",
+        "outputId": "ee29cef6-1e3e-4fc6-b343-4d9c6d4a6dc9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,17 +312,17 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657166</td><td>35.1</td><td>1454474</td><td>77.7</td><td>1454474</td><td>77.7</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>1220141</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454457</td><td>77.7</td><td>1326122</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657166 | 35.1 | 1454474 | 77.7 | 1454474 | 77.7 |\n| Vcells | 1220141 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657166 & 35.1 & 1454474 & 77.7 & 1454474 & 77.7\\\\\n\tVcells & 1220141 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454457 | 77.7 | 1326122 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454457 & 77.7 & 1326122 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657166 35.1 1454474    77.7 1454474  77.7\n",
-              "Vcells 1220141  9.4 8388608    64.0 1975128  15.1"
+              "Ncells  657244 35.2 1454457    77.7 1326122  70.9\n",
+              "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
           "metadata": {}
@@ -334,7 +341,7 @@
       ],
       "metadata": {
         "id": "JO-12d7YHkWy",
-        "outputId": "8c389036-2897-4568-e7bd-54edebb4f250",
+        "outputId": "3c1618c5-f0fa-4167-a4c7-1c74db6b5b5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -503,14 +510,14 @@
         "# carpeta de trabajo\n",
         "# por fabor cambiar numero de experimento si se cambia el loop principal\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"HT0211_1\"\n",
+        "experimento <- \"HT0211_2\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -641,7 +648,7 @@
         "id": "ipLHm3STIfmb",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -711,7 +718,7 @@
         "id": "aK59cRaksScD",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -787,7 +794,7 @@
         "id": "U__C8pfPeTOW",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -848,7 +855,7 @@
         "id": "nMktXlxcue0z",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -876,7 +883,7 @@
         "\n",
         "## Divide la Lista para correr en paralelo en varios Colab\n",
         "\n",
-        "param_search_n_splits <- 1\n",
+        "param_search_n_splits <- 2\n",
         "\n",
         "param_search_splits <- split(param_search,\n",
         "            f = cut(seq_along(param_search), param_search_n_splits, labels=FALSE)\n",
@@ -885,7 +892,7 @@
         "\n",
         "## Selecionamos SPLIT PARA CORRER EN ESTE COLAB\n",
         "\n",
-        "PARAM_SEARCH_SPLIT <- 2\n",
+        "PARAM_SEARCH_SPLIT <- 1\n",
         "\n",
         "\n",
         "## Corremos entrenamiento en el split seleccionado\n",
